# whale-interactive-feedback

./: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  update-homebrew.yml
scripts/: update-title.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_keys.rs  audio.rs  commands.rs  config.rs  image_processor.rs  lib.rs  main.rs  mcp_server.rs  popup.rs  screenshot.rs  types.rs
src-tauri/src/llm/: mod.rs  prompts.rs  provider.rs
src/components/: AudioSettings.vue  CannedResponsesManager.vue  CannedResponsesPopup.vue  FeedbackWindow.vue  FileSelectModal.vue  ImagePreview.vue  LayoutWrapper.vue  MarkdownContent.vue  ScreenshotOverlay.vue  SettingsPanel.vue  TextOptimizer.vue  WindowSettings.vue
src/composables/: index.ts  useApiKeys.ts  useAudio.ts  useDisplayMode.ts  useDragDrop.ts  useFileHandler.ts  useImageHandler.ts  useLayout.ts  useMcpHandler.ts  usePlatform.ts  useScreenshot.ts  useSplitter.ts  useTextOptimization.ts  useTheme.ts  useWindowControl.ts
src/stores/: cannedResponses.ts  config.ts  feedback.ts  index.ts
src/styles/: main.css
src/types/: index.ts
